# cygport

./: .gitignore  .gitmodules  AUTHORS  COPYING-DOCS  COPYING-DOCS.html  ChangeLog  ChangeLog.old  Makefile.am  Makefile_am.html  NEWS  README  R_cygclass.html  TODO  ant_cygclass.html  apache2_cygclass.html  apache_cygclass.html  aspell-dict_cygclass.html  autogen.sh  autotools_cygclass.html  berkdb_cygclass.html  bzr_cygclass.html  check_funcs_cygpart.html  clang_cygclass.html  claws-mail_cygclass.html  clean.sh  cmake_cygclass.html  compilers_cygpart.html  configure.ac  cross_cygclass.html  cvs_cygclass.html  cygport.1.html  cygport.spec  cygport_chapters.html  cygport_compile_functions.html  cygport_concepts.html  cygport_conf.html  cygport_cygclasses.html  cygport_definitions.html  cygport_general_functions.html  cygport_in.html  (+99 more)
cygclass/: Makefile.am  R.cygclass  ant.cygclass  apache.cygclass  apache1.cygclass  apache2.cygclass  aspell-dict.cygclass  autotools.cygclass  berkdb.cygclass  bzr.cygclass  canadian-cross.cygclass  clang.cygclass  claws-mail.cygclass  cmake.cygclass  cross.cygclass  cvs.cygclass  distutils-multi.cygclass  distutils.cygclass  docbook.cygclass  ebook.cygclass  emacs.cygclass  font.cygclass  fossil.cygclass  fox.cygclass  ggz.cygclass  git.cygclass  gnome.org.cygclass  gnome2.cygclass  gnustep.cygclass  gst-plugins.cygclass  gst-plugins0.10.cygclass  gstreamer.cygclass  gtk2-perl.cygclass  gtkmm.cygclass  hg.cygclass  httpd.cygclass  java.cygclass  kde.org.cygclass  kde3.cygclass  kde4.cygclass  (+62 more)
data/: Makefile.am  cygport-bash-completion  cygport-xvfb.conf  cygport.conf  cygport.nanorc  cygport.vim  cygport.xml  i686-pc-cygwin.meson  i686-w64-mingw32.meson  meson.build  mirrors  mono.snk  sample.cygport  uac-manifest.in  x86_64-pc-cygwin.meson  x86_64-w64-mingw32.meson
doc/: Makefile.am  index.html  meson.build  robodoc.rc  robodoc.sh
lib/: Makefile.am  R.cygclass  apache.cygclass  apache1.cygclass  apache2.cygclass  aspell-dict.cygclass  autotools.cygclass  berkdb.cygclass  bzr.cygclass  check_funcs.cygpart  claws-mail.cygclass  cmake.cygclass  compilers.cygpart  config_registry.cygpart  cross.cygclass  cvs.cygclass  distutils.cygclass  docbook.cygclass  ebook.cygclass  emacs.cygclass  font.cygclass  fossil.cygclass  fox-build.cygclass  fox.cygclass  ggz.cygclass  git.cygclass  gnome.org.cygclass  gnome2.cygclass  gnustep.cygclass  gst-plugins.cygclass  gst-plugins0.10.cygclass  gst-plugins0.8.cygclass  gstreamer.cygclass  gtk2-perl.cygclass  gtkmm.cygclass  help.cygpart  hg.cygclass  inheritance.cygpart  java.cygclass  kde3.cygclass  (+39 more)
test/: Makefile.am  bootstrap  messages
tests/: Makefile.am  bootstrap  meson.build  messages
testsuite/: meson.build  test-driver  vars
testsuite/R/: meson.build
testsuite/R/cran/: R-chron.cygport  R-chron.list  vars
testsuite/aspell/: meson.build
testsuite/aspell-dict/: meson.build
testsuite/aspell-dict/all/: aspell-pa.cygport  aspell-pa.list
testsuite/aspell/dict/: aspell-pa.list  vars
testsuite/autotools/: meson.build
testsuite/autotools/SDL/: SDL2_net.cygport  SDL2_net.list  vars
testsuite/autotools/c/: libtxc_dxtn-1.0.1.tar.bz2  libtxc_dxtn.cygport  libtxc_dxtn.list
testsuite/autotools/gnome/: 0.7.2-no-undefined.patch  libnotify.list  vars
testsuite/autotools/gtkmm/: 0001-Don-t-include-individual-pango-headers.patch  pangomm-2.40.1.tar.xz  pangomm1.4.cygport  vars
testsuite/autotools/kde3/: libkexif-0.2.5-qcombobox.patch  libkexif.cygport  libkexif.list  vars
testsuite/autotools/mate/: 1.14.0-no-exit-on-idle.patch  1.2.0-no-undefined.patch  mate-menus.cygport  mate-menus.list  mate-notification-daemon-1.18.0.tar.xz  vars
testsuite/autotools/xfce/: 1.6.1-no-undefined.patch  vars  xfce4-hamster-plugin.cygport  xfce4-hamster-plugin.list
testsuite/basic/: meson.build  test-bootstrap  test-help  test-info  test-version
testsuite/basic/info/: foo.cygport  info.out
testsuite/bzr/: meson.build
testsuite/cmake/: meson.build
testsuite/cmake/all/: win-iconv.cygport
testsuite/cmake/c/: 0.0.6-cygwin.patch  vars  win-iconv.list
testsuite/cmake/kde4/: kaccessible.cygport  kaccessible.list  vars
testsuite/cmake/kf5/: vars
testsuite/cmake/qt4/: 0.2.0-cygwin.patch  attica.cygport  attica.list  vars
testsuite/cmake/qt5/: 2.0.0-cmake-install.patch  vars
testsuite/compressions/: meson.build
testsuite/compressions/patch-compressions/: 01-test.patch.bz2  03-test.patch.xz  04-test.patch.zst  patch-compressions.cygport  vars
testsuite/cross/: meson.build
testsuite/cross/cmake/: mingw64-i686-win-iconv.cygport  mingw64-i686-win-iconv.list  vars
testsuite/cross/make/: 1.1-mingw.patch  crypt-2.1.tar.bz2  mingw64-i686-crypt.cygport  mingw64-i686-crypt.list  vars
testsuite/cross/qt5/: 0.24-mingw-install.patch  0.34-os-win.patch  mingw64-i686-qt5ct.cygport  mingw64-i686-qt5ct.list  (+1 more)
testsuite/distdir/: SDL_net-hg-2.0.1.tar.bz2  Structures_Graph-1.1.1.tgz  apnum.tar.xz  json-glib-1.4.2.tar.xz  kcolorchooser-17.08.3.tar.xz  libkexif-0.2.5.tar.bz2  login-1.11.1.tar.xz  lv2-1.12.0.tar.bz2  mate-menus-1.18.0.tar.xz  notify-python-0.1.1.tar.bz2  qt5ct-0.34.tar.bz2  result-1.5.tbz  ulem.tar.xz
testsuite/docbook/: meson.build
testsuite/download/: meson.build
testsuite/files/: meson.build
testsuite/font/: meson.build
testsuite/git/: meson.build
testsuite/gnome/: meson.build
testsuite/gtkmm/: meson.build
testsuite/hints/: meson.build
testsuite/httpd/: meson.build
testsuite/kde/: meson.build
testsuite/logic/: meson.build
testsuite/lua/: meson.build
testsuite/mate/: meson.build
testsuite/meson/: meson.build
testsuite/mingw/: meson.build
testsuite/ocaml/: meson.build
testsuite/perl/: meson.build
testsuite/php/: meson.build
testsuite/python/: meson.build
testsuite/qmake/: meson.build
testsuite/qt3/: meson.build
testsuite/qt4/: meson.build
testsuite/qt5/: meson.build
testsuite/ruby/: meson.build
testsuite/scl/: meson.build
testsuite/svn/: meson.build
testsuite/texlive/: meson.build
testsuite/waf/: meson.build
testsuite/xorg/: meson.build
(+188 files in other folders)
