cygclassdir = $(pkgdatadir)/cygclass
cygclass_DATA =					\
	cygclass/ant.cygclass			\
	cygclass/apache.cygclass		\
	cygclass/apache1.cygclass		\
	cygclass/apache2.cygclass		\
	cygclass/aspell-dict.cygclass		\
	cygclass/autotools.cygclass		\
	cygclass/berkdb.cygclass		\
	cygclass/bzr.cygclass			\
	cygclass/clang.cygclass			\
	cygclass/claws-mail.cygclass		\
	cygclass/cmake.cygclass			\
	cygclass/cross.cygclass			\
	cygclass/cvs.cygclass			\
	cygclass/distutils.cygclass		\
	cygclass/distutils-multi.cygclass	\
	cygclass/docbook.cygclass		\
	cygclass/ebook.cygclass			\
	cygclass/emacs.cygclass			\
	cygclass/font.cygclass			\
	cygclass/fossil.cygclass		\
	cygclass/fox.cygclass			\
	cygclass/ggz.cygclass			\
	cygclass/git.cygclass			\
	cygclass/gnome.org.cygclass		\
	cygclass/gnome2.cygclass		\
	cygclass/gnustep.cygclass		\
	cygclass/gst-plugins.cygclass		\
	cygclass/gst-plugins0.10.cygclass	\
	cygclass/gstreamer.cygclass		\
	cygclass/gtk2-perl.cygclass		\
	cygclass/gtkmm.cygclass			\
	cygclass/hg.cygclass			\
	cygclass/java.cygclass			\
	cygclass/kde3.cygclass			\
	cygclass/kde4.cygclass			\
	cygclass/lua.cygclass			\
	cygclass/mate.cygclass			\
	cygclass/mono.cygclass			\
	cygclass/mtn.cygclass			\
	cygclass/nant.cygclass			\
	cygclass/ocaml.cygclass			\
	cygclass/octave.cygclass		\
	cygclass/opensync.cygclass		\
	cygclass/perl.cygclass			\
	cygclass/php.cygclass			\
	cygclass/pygtk.cygclass			\
	cygclass/pypy.cygclass			\
	cygclass/pypy-distutils.cygclass	\
	cygclass/python.cygclass		\
	cygclass/python-distutils.cygclass	\
	cygclass/python3.cygclass		\
	cygclass/python3-distutils.cygclass	\
	cygclass/qt3.cygclass			\
	cygclass/qt3-qmake.cygclass		\
	cygclass/qt4.cygclass			\
	cygclass/qt4-cmake.cygclass		\
	cygclass/qt4-qconf.cygclass		\
	cygclass/qt4-qmake.cygclass		\
	cygclass/R.cygclass			\
	cygclass/rox.cygclass			\
	cygclass/ruby.cygclass			\
	cygclass/ruby-gnome2.cygclass		\
	cygclass/svn.cygclass			\
	cygclass/tcl.cygclass			\
	cygclass/texlive.cygclass		\
	cygclass/toolchain.cygclass		\
	cygclass/utils.cygclass			\
	cygclass/vim.cygclass			\
	cygclass/waf.cygclass			\
	cygclass/wxwidgets.cygclass		\
	cygclass/xfce4.cygclass			\
	cygclass/xorg.cygclass			\
	cygclass/xvfb.cygclass			\
	$(NULL)

EXTRA_DIST += $(cygclass_DATA)
