cygclassdir = $(pkgdatadir)/cygclass
cygclass_DATA =					\
	cygclass/apache.cygclass		\
	cygclass/apache2.cygclass		\
	cygclass/aspell-dict.cygclass		\
	cygclass/autotools.cygclass		\
	cygclass/bzr.cygclass			\
	cygclass/clang.cygclass			\
	cygclass/cmake.cygclass			\
	cygclass/cross.cygclass			\
	cygclass/cvs.cygclass			\
	cygclass/distutils.cygclass		\
	cygclass/distutils-multi.cygclass	\
	cygclass/docbook.cygclass		\
	cygclass/emacs.cygclass			\
	cygclass/font.cygclass			\
	cygclass/fossil.cygclass		\
	cygclass/fox.cygclass			\
	cygclass/git.cygclass			\
	cygclass/gnome.org.cygclass		\
	cygclass/gnome2.cygclass		\
	cygclass/gst-plugins.cygclass		\
	cygclass/gstreamer.cygclass		\
	cygclass/gtk2-perl.cygclass		\
	cygclass/gtkmm.cygclass			\
	cygclass/hg.cygclass			\
	cygclass/httpd.cygclass			\
	cygclass/kde.org.cygclass		\
	cygclass/kde3.cygclass			\
	cygclass/kde4.cygclass			\
	cygclass/kf5.cygclass			\
	cygclass/lua.cygclass			\
	cygclass/mate.cygclass			\
	cygclass/meson.cygclass			\
	cygclass/multilib.cygclass		\
	cygclass/mtn.cygclass			\
	cygclass/ninja.cygclass			\
	cygclass/ocaml.cygclass			\
	cygclass/octave.cygclass		\
	cygclass/perl.cygclass			\
	cygclass/php.cygclass			\
	cygclass/pygtk.cygclass			\
	cygclass/python.org.cygclass		\
	cygclass/python.cygclass		\
	cygclass/python-distutils.cygclass	\
	cygclass/python-wheel.cygclass		\
	cygclass/python2.cygclass		\
	cygclass/python2-distutils.cygclass	\
	cygclass/python2-wheel.cygclass		\
	cygclass/python3.cygclass		\
	cygclass/python3-distutils.cygclass	\
	cygclass/python3-wheel.cygclass		\
	cygclass/qt3.cygclass			\
	cygclass/qt3-qmake.cygclass		\
	cygclass/qt4.cygclass			\
	cygclass/qt4-cmake.cygclass		\
	cygclass/qt4-qmake.cygclass		\
	cygclass/qt5.cygclass			\
	cygclass/qt5-qmake.cygclass		\
	cygclass/R.cygclass			\
	cygclass/ruby.cygclass			\
	cygclass/rubygem.cygclass		\
	cygclass/svn.cygclass			\
	cygclass/tcl.cygclass			\
	cygclass/texlive.cygclass		\
	cygclass/toolchain.cygclass		\
	cygclass/utils.cygclass			\
	cygclass/vim.cygclass			\
	cygclass/waf.cygclass			\
	cygclass/wxwidgets.cygclass		\
	cygclass/xfce4.cygclass			\
	cygclass/xorg.cygclass			\
	cygclass/xvfb.cygclass			\
	$(NULL)

EXTRA_DIST += $(cygclass_DATA)
