cygclasses = files(
    'apache.cygclass',
    'apache2.cygclass',
    'aspell-dict.cygclass',
    'autotools.cygclass',
    'bzr.cygclass',
    'clang.cygclass',
    'cmake.cygclass',
    'cross.cygclass',
    'cvs.cygclass',
    'distutils.cygclass',
    'distutils-multi.cygclass',
    'docbook.cygclass',
    'emacs.cygclass',
    'font.cygclass',
    'fossil.cygclass',
    'fox.cygclass',
    'git.cygclass',
    'gnome.org.cygclass',
    'gnome2.cygclass',
    'gst-plugins.cygclass',
    'gstreamer.cygclass',
    'gtk2-perl.cygclass',
    'gtkmm.cygclass',
    'hg.cygclass',
    'httpd.cygclass',
    'kde.org.cygclass',
    'kde4.cygclass',
    'kf5.cygclass',
    'lua.cygclass',
    'mate.cygclass',
    'meson.cygclass',
    'mtn.cygclass',
    'multilib.cygclass',
    'ninja.cygclass',
    'ocaml.cygclass',
    'octave.cygclass',
    'perl.cygclass',
    'php.cygclass',
    'pygtk.cygclass',
    'python.cygclass',
    'python.org.cygclass',
    'python-distutils.cygclass',
    'python-wheel.cygclass',
    'python2.cygclass',
    'python2-distutils.cygclass',
    'python2-wheel.cygclass',
    'python3.cygclass',
    'python3-distutils.cygclass',
    'python3-wheel.cygclass',
    'qt3.cygclass',
    'qt3-qmake.cygclass',
    'qt4.cygclass',
    'qt4-cmake.cygclass',
    'qt4-qconf.cygclass',
    'qt4-qmake.cygclass',
    'qt5.cygclass',
    'qt5-qmake.cygclass',
    'R.cygclass',
    'ruby.cygclass',
    'rubygem.cygclass',
    'ruby-gnome2.cygclass',
    'sugar.cygclass',
    'svn.cygclass',
    'tcl.cygclass',
    'texlive.cygclass',
    'toolchain.cygclass',
    'utils.cygclass',
    'vim.cygclass',
    'waf.cygclass',
    'wxwidgets.cygclass',
    'xfce4.cygclass',
    'xorg.cygclass',
    'xvfb.cygclass'
)

install_data(cygclasses, install_dir: cygclassdir)
