cygclassdir = $(pkglibdir)/lib

dist_cygclass_DATA = 			\
	apache.cygclass				\
	aspell-dict.cygclass		\
	berkdb.cygclass				\
	bzr.cygclass				\
	claws-mail.cygclass			\
	cross.cygclass				\
	cvs.cygclass				\
	distutils.cygclass			\
	docbook.cygclass			\
	ebook.cygclass				\
	emacs.cygclass				\
	font.cygclass				\
	fox.cygclass				\
	ggz.cygclass				\
	git.cygclass				\
	gnome.org.cygclass			\
	gnome2.cygclass				\
	gst-plugins.cygclass		\
	gst-plugins0.8.cygclass		\
	gst-plugins0.10.cygclass	\
	gstreamer.cygclass			\
	gtk2-perl.cygclass			\
	gtkmm.cygclass				\
	hg.cygclass					\
	java.cygclass				\
	kde3.cygclass				\
	kde4.cygclass				\
	lua.cygclass				\
	mono.cygclass				\
	mtn.cygclass				\
	ocaml.cygclass				\
	octave.cygclass				\
	opensync.cygclass			\
	perl.cygclass				\
	php.cygclass				\
	pygtk.cygclass				\
	python.cygclass				\
	qt3.cygclass				\
	qt4.cygclass				\
	qt4-cmake.cygclass			\
	qt4-qmake.cygclass			\
	R.cygclass					\
	ruby.cygclass				\
	ruby-gnome2.cygclass		\
	svn.cygclass				\
	tcl.cygclass				\
	utils.cygclass				\
	wxwidgets.cygclass			\
	xfce4.cygclass				\
	xorg.cygclass				\
	zope.cygclass
