dist_pkglib_DATA = \
	check_funcs.cygpart			\
	compilers.cygpart			\
	config_registry.cygpart		\
	help.cygpart				\
	inheritance.cygpart			\
	pkg_cleanup.cygpart			\
	pkg_info.cygpart			\
	pkg_pkg.cygpart				\
	src_compile.cygpart			\
	src_fetch.cygpart			\
	src_install.cygpart			\
	src_postinst.cygpart		\
	src_prep.cygpart			\
	src_test.cygpart			\
	syntax.cygpart				\
	$(NULL)
