cygpartdir = $(pkgdatadir)/lib
cygpart_DATA = \
	lib/check_funcs.cygpart		\
	lib/compilers.cygpart		\
	lib/config_registry.cygpart	\
	lib/help.cygpart		\
	lib/inheritance.cygpart		\
	lib/pkg_cleanup.cygpart		\
	lib/pkg_info.cygpart		\
	lib/pkg_pkg.cygpart		\
	lib/pkg_upload.cygpart		\
	lib/src_compile.cygpart		\
	lib/src_fetch.cygpart		\
	lib/src_install.cygpart		\
	lib/src_postinst.cygpart	\
	lib/src_prep.cygpart		\
	lib/src_test.cygpart		\
	lib/syntax.cygpart		\
	$(NULL)

EXTRA_DIST += $(cygpart_DATA)
