cygparts = files(
    'check_funcs.cygpart',
    'compilers.cygpart',
    'config_registry.cygpart',
    'help.cygpart',
    'inheritance.cygpart',
    'pkg_cleanup.cygpart',
    'pkg_info.cygpart',
    'pkg_pkg.cygpart',
    'pkg_upload.cygpart',
    'src_compile.cygpart',
    'src_fetch.cygpart',
    'src_install.cygpart',
    'src_postinst.cygpart',
    'src_prep.cygpart',
    'src_test.cygpart',
    'syntax.cygpart'
)

install_data(cygparts, install_dir: cygpartdir)
