testenv = environment()
testenv.set('HOME', meson.build_root())
testenv.set('PACKAGE', meson.project_name())
testenv.set('VERSION', meson.project_version())
testenv.set('top_srcdir', meson.source_root())
testenv.set('top_builddir', meson.build_root())

subdir('basic')

test_driver = find_program('test-driver')
# this is used in several subdirs
cmake = find_program('cmake', required: false)

subdir('download')
subdir('aspell')
subdir('autotools')
subdir('cmake')
subdir('cross')
subdir('docbook')
subdir('font')
subdir('httpd')
subdir('kde')
subdir('lua')
subdir('meson')
subdir('ocaml')
subdir('perl')
subdir('php')
subdir('python')
subdir('qmake')
subdir('R')
subdir('ruby')
subdir('texlive')
subdir('waf')
